[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforced-lib"
version = "1.2.2"
requires-python = ">=3.12, <4"

description = "Reinforcement learning library"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["deep-reinforcement-learning", "jax", "library", "machine-learning", "reinforcement-learning"]

authors = [
    {name = "Maksymilian Wojnar", email = "mwojnar@agh.edu.pl"},
    {name = "Wojciech Ciężobka", email = "wciezobka@agh.edu.pl"},
    {name = "Krzysztof Rusek", email = "krusek@agh.edu.pl"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

dependencies = [
    "cloudpickle~=3.1.1",
    "gymnasium~=1.1.1",
    "jax-ai-stack~=2025.2.5",
    "lz4~=4.4.3",
    "matplotlib~=3.10.1",
    "tensorboardX~=2.6.2.2",
    "wandb~=0.19.8"
]

[project.optional-dependencies]
docs = [
    "sphinx~=8.1.3",
    "sphinx-rtd-theme~=3.0.2"
]
full = [
    "joblib~=1.4.2",
    # "ns3-ai==1.0.2",
    "pygame~=2.6.1",
    "seaborn~=0.13.2",
    "tensorflow~=2.18.0"
]
