[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforced-lib"
version = "2.0.1"
requires-python = ">=3.12, <4"

description = "Reinforcement learning library"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["deep-reinforcement-learning", "jax", "library", "machine-learning", "reinforcement-learning"]

authors = [
    {name = "Maksymilian Wojnar", email = "mwojnar@agh.edu.pl"},
    {name = "Wojciech Ciężobka", email = "wciezobka@agh.edu.pl"},
    {name = "Krzysztof Rusek", email = "krusek@agh.edu.pl"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

dependencies = [
    "cloudpickle~=3.1.1",
    "evosax~=0.2.0",
    "gymnasium~=1.2.1",
    "jax-ai-stack~=2025.10.28",
    "lz4~=4.4.4",
    "matplotlib~=3.10.7",
    "tensorboardX~=2.6.4",
    "wandb~=0.22.3"
]

[project.optional-dependencies]
docs = [
    "sphinx~=8.2.3",
    "sphinx-rtd-theme~=3.0.2"
]
full = [
    "joblib~=1.5.2",
    # "ns3-ai==1.0.2",
    "pygame~=2.6.1",
    "seaborn~=0.13.2",
    "tensorflow~=2.20.0"
]

[tool.setuptools]
packages = ["reinforced_lib"]
